@@ -1434,7 +1434,7 @@ sub check_for_bad_run_test ()
                     }
 
                     if (m/PerlACE::Run_Test/) {
-                        print_error ("$file:$.: using PerlACE::Run_Test, use TestTarget::random_port");
+                        print_error ("$file:$.: using PerlACE::Run_Test, use PerlACE::TestTarget");
                     }
 
                     if (m/PerlACE::random_port/) {
@@ -1545,6 +1545,28 @@ sub check_for_absolute_ace_wrappers()
                 if (m/\~schmidt\/ACE_wrappers\//) {
                     chomp;
                     print_error ("$file:$.: ~schmidt/ACE_wrappers found");
+                    print_error ($_);
+                }
+            }
+            close (FILE);
+        }
+        else {
+            print STDERR "Error: Could not open $file\n";
+        }
+    }
+}
+
+# Check for generated headers in the code documentation
+sub check_for_generated_headers()
+{
+    print "Running generated headers test\n";
+    foreach $file (@files_cpp, @files_inl, @files_h) {
+        if (open (FILE, $file)) {
+            print "Looking at file $file\n" if $opt_d;
+            while (<FILE>) {
+                if (m/Code generated by the The ACE ORB \(TAO\) IDL Compiler/) {
+                    chomp;
+                    print_error ("$file:$.: header found");
                     print_error ($_);
                 }
             }
@@ -2005,6 +2027,7 @@ if (!getopts ('cdhl:t:mv') || $opt_h) {
     print "======================================================\n";
     print "list of the tests that could be run:\n";
     print "\t   check_for_noncvs_files
+           check_for_generated_headers
            check_for_synch_include
            check_for_OS_h_include
            check_for_streams_include
@@ -2067,6 +2090,7 @@ if ($opt_t) {
 print "--------------------Configuration: Fuzz - Level ",$opt_l,
       "--------------------\n";
 
+check_for_generated_headers () if ($opt_l >= 6);
 check_for_bad_run_test () if ($opt_l >= 5);
 check_for_deprecated_macros () if ($opt_l >= 1);
 check_for_refcountservantbase () if ($opt_l >= 1);
